# ai_sport

./: .gitignore  README.md  rep_counter.mnn  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  mnn_jni.cpp  pose_jni.cpp  rep_counter_jni.cpp
app/src/main/java/com/aisport/camera/: LiveWorkoutChart.kt  LiveWorkoutSession.kt  RealtimeFrameAnalyzer.kt
app/src/main/java/com/aisport/engine/: MnnEngine.kt
app/src/main/java/com/aisport/exercise/: ExerciseAnalyzer.kt
app/src/main/java/com/aisport/pose/: NativePoseEstimator.kt  PoseEstimator.kt
app/src/main/java/com/aisport/poster/: PoseDebugRenderer.kt  PosterComposer.kt  WorkoutTimelineRenderer.kt
app/src/main/java/com/aisport/rep/: NativeRepCounter.kt  RepCounterInference.kt
app/src/main/java/com/aisport/training/: AnnotationExport.kt
app/src/main/java/com/aisport/ui/: MainActivity.kt
app/src/main/java/com/aisport/video/: VideoFrameSampler.kt
app/src/main/java/com/aisport/vision/: SportAnalyzer.kt
app/src/main/java/com/aisport/workout/: WorkoutInsights.kt
app/src/main/res/drawable/: ic_launcher.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
doc/: 00_开源仓库地址.md  01_应用场景.md  02_用户痛点.md  03_技术方案.md  04_创新点.md  05_预期效果.md  06_辅助材料_加分项.md
training/: DEPLOY_MNN.md  README.md  autolabel.py  convert_to_mnn.ps1  dataset.py  eval.py  export_onnx.py  model.py  predict_videos.py  train.py
training/web/: app.py  requirements.txt
training/web/static/: app.js  style.css
training/web/templates/: index.html
